# second-brain-automation

./: .gitignore  CLAUDE.md  drivers-nvidia.md  plan.md
LXC_1_traefik/: .env.example  docker-compose.yml  middlewares.yml  readme  readme.md  services.yml
LXC_1_traefik/dynamic/: services.yml
LXC_1_traefik/root/.cloudflared/: config.yml
LXC_2_hermes_mcp/: .env.example  Dockerfile  docker-compose.yml  mcp-config.json  mcp-server.js  package.json  pyproject.toml  readme  readme.md  server.py
LXC_3_Odysseus/: .env.example  mcp-servers.json  readme
LXC_4_litellm/: .env.example  config.yaml  docker-compose.yml  readme  readme.md
LXC_5_dados/: .env.example  01_databases.sql  docker-compose.yml  readme  readme.md
LXC_7_docker_stack/: docker-compose.yml  readme  readme.md
LXC_8_llama/: .env.example  llama-server.service  readme.md  setup.sh
