[project]
name = "second-brain-mcp"
version = "1.0.0"
description = "MCP server do second brain — vault, skills e memória"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-frontmatter>=1.1.0",
    "aiofiles>=24.0.0",
    "glob2>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"